@@ -139,6 +139,12 @@ timeout 20
 #
 #scale_ui 1
 
+# Set arbitrary boot arguments on Mac OS. When this token is activated, RefindPlus will change
+# the boot arguments in Mac OS to the specified string. This setting is only applied when booting
+# Mac OS and does not remove boot arguments when it is disabled and boot arguments are already present.
+#
+#set_mac_boot_args "-v"
+
 # Blank screen and show different solid colours after the specified
 # number of seconds without input. Screen returns after most keypresses
 # (Excluding modifier keys such as Shift, Control, Alt, and Option).
